--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,15 @@
 Package: mvTargetOpt
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: multivariate multi-target optimization
+Version: 0.2.0
+Author: Andreas Maendle
+Maintainer: Andreas Maendler <maendle@uni-bremen.de>
+Description: Multi-objective optimization algorithm.
+    A new approach, using ideas from PCA dimension reduction and PLS regression.
+License: GPL
 Encoding: UTF-8
 LazyData: true
-Imports: plsdepot,
-    dplyr
+Imports: plsdepot
 RoxygenNote: 7.0.2
 Suggests: knitr,
     rmarkdown
